After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 771441 - vaapidecode: h264/avc3 streams cannot be played
vaapidecode: h264/avc3 streams cannot be played
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
unspecified
Other All
: Normal normal
: 1.9.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on: 770921
Blocks:
 
 
Reported: 2016-09-14 16:56 UTC by Víctor Manuel Jáquez Leal
Modified: 2016-09-30 07:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
vaapidecode: codec_data minimal size is 7 (1.08 KB, patch)
2016-09-14 16:56 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2016-09-14 16:56:31 UTC
When network streams have format AVC3 they cannot be played with vaapidecode because 
the internal parser never have enough data.
Comment 1 Víctor Manuel Jáquez Leal 2016-09-14 16:56:35 UTC
Created attachment 335550 [details] [review]
vaapidecode: codec_data minimal size is 7

When the format of a H.264 stream is AVC3, the SPS and PPS are inside the
stream, not in the codec_data, so the size of codec_data might be 7.

This patch reduces the minimal size of the codec_data buffer from 8 to 7.
Comment 2 Sebastian Dröge (slomo) 2016-09-15 09:59:08 UTC
Comment on attachment 335550 [details] [review]
vaapidecode: codec_data minimal size is 7

Why was it 8 before though? That also seems too small for avcC with SPS and PPS :)
Comment 3 Víctor Manuel Jáquez Leal 2016-09-15 11:12:48 UTC
Should I merge this also into 1.8?
Comment 4 Víctor Manuel Jáquez Leal 2016-09-16 09:33:38 UTC
commit 9afa0ce47169cc91aa212dcf7db375a64244c0ba
Author: Víctor Manuel Jáquez Leal <victorx.jaquez@intel.com>
Date:   Wed Sep 14 18:42:09 2016 +0200

    vaapidecode: codec_data minimal size is 7
    
    When the format of a H.264 stream is AVC3, the SPS and PPS are inside the
    stream, not in the codec_data, so the size of codec_data might be 7.
    
    This patch reduces the minimal size of the codec_data buffer from 8 to 7.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=771441